# nBogne

./: .gitignore  BD_TIMELINE.md  Dockerfile  Dockerfile.ui  ENGINEER_STUDY_TOPICS.md  README.md  config.py  db.py  docker-compose.yml  encoding.py  main.py  modem.py  nbogne-transport-README.md  pyproject.toml  requirements.txt  transport.py  watchdog.py  wire_format.py
config/: default.yaml  docker.yaml  local.yaml
data/: outbox.db
nbogne/: README.md  __init__.py  adapter.py  config.py  exceptions.py  logging_config.py  models.py  queue.py  receiver.py  transmitter.py
nbogne/adapter/: receiver.py  sender.py
nbogne/compression/: codebook.py  dictionary.py  encoder.py  pipeline.py  templates.py
nbogne/crypto/: encryption.py
nbogne/data/: nbogne.db
nbogne/logging_db/: transmission_log.py
nbogne/tests/: test_e2e.py
nbogne/transport/: queue.py  sms.py  wire.py
scripts/: install.sh  mock_mediator.py  nbogne.service  queue_manager.py  run_adapter.py  run_demo.sh  test_client.py
server/: app.py  sms_trigger.py
tests/: __init__.py  test_config.py  test_encoding.py  test_modem_hw.py  test_queue.py  test_server.py  test_wire_format.py
ui/: app.py  dashboard.py  requirements.txt
ui/templates/: base.html  index.html  manual.html  patients.html  queue.html  send.html  settings.html
